--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "clasesnode",
+  "name": "expressclass",
   "version": "1.0.0",
-  "description": "this is a class about express",
-  "main": "app.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "sass": "^1.34.0"
-  },
-  "devDependencies": {},
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "."
-  ],
   "author": "Angel Rivera",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
+  }
 }
