--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "expressclass",
+  "name": "nodepractice",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "this a little practice about node and post ",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "3"
+  },
   "author": "Angel Rivera",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
