--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "nodepractice",
+  "name": "miniserver",
   "version": "1.0.0",
-  "description": "this a little practice about node and post ",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "3"
-  },
   "author": "Angel Rivera",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
